# meterapi/Data/Mappers/ChangeEmailDTO.cs
@@ -1,0 +1,7 @@
+﻿namespace meterapi.Data.Mappers
+{
+    public class ChangeEmailDTO
+    {
+        public string NewEmail { get; set; }
+    }
+}
